# qubolt

./: README.md
q-loop/backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py  seed_fleet.py
q-loop/backend/alembic/: env.py
q-loop/backend/alembic/versions/: 0001_create_tenants_and_users.py  0002_create_shipments_and_routes.py  0003_create_ingestion_errors_and_audit.py  0004_add_indexes_and_constraints.py  0005_add_sustainability_columns.py  0006_add_sustainability_benchmarks.py  0007_add_user_profiles.py  0008_add_messages_and_driver_locations.py  0009_add_geofence_and_photos.py  0010_add_shipment_driver_columns.py
q-loop/backend/app/: dependencies.py  main.py
q-loop/backend/app/api/: router.py
q-loop/backend/app/api/v1/: ai.py  alerts.py  analytics.py  auth.py  comms.py  drivers.py  geofence.py  ingestion.py  partners.py  photos.py  returns.py  routes.py  shipments.py  users.py
q-loop/backend/app/core/: config.py  database.py  security.py
q-loop/backend/app/models/: __init__.py  audit.py  base.py  customer.py  delivery_partner.py  delivery_photo.py  driver_location.py  geofence.py  ingestion.py  message.py  route.py  shipment.py  tenant.py  user.py  user_profile.py
q-loop/backend/app/schemas/: ai_insight.py  common.py  qr_handshake.py  route.py  shipment.py  tenant.py  user.py
q-loop/backend/app/schemas/ingestion/: __init__.py  base.py  delhivery_routes.py  delivery_logistics.py  (+5 more)
q-loop/backend/app/services/: ai_service.py  auth_service.py  ingestion_service.py  qr_service.py  routing_service.py  twilio_service.py
q-loop/backend/app/utils/: csv_parser.py  exceptions.py  pagination.py
q-loop/backend/app/workers/: celery_app.py  ingestion_worker.py  route_optimizer.py
(+58 files in other folders)
